--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
   
   <title>Frontend Mentor | 3-column preview card component</title>
 
+  <link rel="stylesheet" href="css/style.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&display=swap" rel="stylesheet">
+
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet">
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -16,28 +26,32 @@
 </head>
 <body>
   <div class="main_container">
-      <div class="sedans_container"> Sedans
-        Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-        or on your next road trip.
+      <div class="sedans_container"> 
+        <div class="img_sedan"><img src="img/icon-sedans.svg" alt="imagen_car_sedan"></div>
+        <div class="title_block_1"><h2>SEDANS</h2></div>
+        <div class="paragraph_block_1"><p>
+          Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+          or on your next road trip.</p></div>
+        <div class="button_container_1"><button class="button_block_1">Learn More</button></div>
+        
       </div>
-      <div class="suvs_container"> SUVs
+      <div class="suvs_container">
+        <div class="img_suv"><img src="img/icon-suvs.svg" alt="imagen_car_suv"></div>
+        <div class="title_block_2"><h2>SUVS</h2></div>
+        <div class="paragraph_block_2"><p>
         Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-        and off-road adventures.
+        and off-road adventures.</p></div>
+        <div class="button_container_2"><button class="button_block_2">Learn More</button></div>
+        
       </div>
-      <div class="luxury_container">Luxury
-        Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-        rental and arrive in style.
+      <div class="luxury_container">
+        <div class="img_luxury"><img src="img/icon-luxury.svg" alt="imagen_car_luxury"></div>
+        <div class="title_block_3"><h2>LUXURY</h2></div>
+        <div class="paragraph_block_3"><p>
+          Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+          rental and arrive in style.</p></div>
+        <div class="button_container_3"><button class="button_block_3">Learn More</button></div>
     </div>
-  </div>
- 
-
- 
-
-  
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
 </html>
